--- a/ds_pull/ConsoleApp2.csproj
+++ b/ds_pull/ConsoleApp2.csproj
@@ -140,4 +140,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="App.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
