--- a/ds_pull/bin/x86/Release/net6.0/ConsoleApp2.dll.config
+++ b/ds_pull/bin/x86/Release/net6.0/ConsoleApp2.dll.config
@@ -2,9 +2,15 @@
 <configuration>
 	<connectionStrings>
 		<add name="MyConnectionString" connectionString="server=localhost;user id=root;password=root;database=test" />
-		
+
 
 
 	</connectionStrings>
+	<appSettings>
+		<add key="BufferSize" value="1048576" />
+		<add key="Module" value="RFID_PEOPLE" />
+		<add key="Hostname" value="omp.com" />
+		<add key="dataType" value="LOG" />
+	</appSettings>
 
 </configuration>
